--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=4000
 
-MongoDB1=mongodb+srv://Anita:iLHyu8WSSmkSKMBf@cluster0.8pxmhmw.mongodb.net/?retryWrites=true&w=majority
+MongoDB1=mongodb+srv://anita19:WUFEzNNBt1F5NSlL@cluster0.o5iek6a.mongodb.net/?retryWrites=true&w=majority
 
