--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=4000
 
-MongoDB1=mongodb+srv://anita19:WUFEzNNBt1F5NSlL@cluster0.o5iek6a.mongodb.net/?retryWrites=true&w=majority
+MongoDB1=mongodb+srv://anita19:pqYLcYHO0Ve35QgV@cluster0.o5iek6a.mongodb.net/?retryWrites=true&w=majority
+
 
